// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`calculate function should match the snapshot for AC button 1`] = `
Object {
  "next": null,
  "operation": null,
  "total": null,
}
`;

exports[`calculate function should match the snapshot for number buttons 1`] = `
Object {
  "next": "52",
  "operation": "+",
  "total": "10",
}
`;

exports[`calculate function should match the snapshot for number buttons 2`] = `
Object {
  "next": "0",
  "total": null,
}
`;
